fix(search): 🐛 incorrect alignment for typeahead item text

--- a/resources/skins.citizen.search/components/TypeaheadListItem.less
+++ b/resources/skins.citizen.search/components/TypeaheadListItem.less
@@ -43,6 +43,7 @@
 	&-text {
 		display: flex;
 		flex-grow: 1;
+		flex-direction: column;
 		gap: 2px;
 		overflow: hidden;
 		font-size: var( --font-size-small );
